[package]
name = "a1800_codec"
version = "1.1.0"
description = "A clean room implementation of the GeneralPlus A1800 audio codec"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/John-K/a1800_codec"
keywords = ["audio", "codec", "a1800", "GeneralPlus", "SunPlus"]
categories = ["compression", "encoding", "game-development", "multimedia::audio" ]

[lib]
name = "a1800_codec"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py38", "extension-module", "generate-import-lib"], optional = true }
